--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,12 @@
     <string name="title">Title</string>
     <string name="user">Username</string>
     <string name="add">Add</string>
+    <string name="user_add"> User Settings</string>
+    <string name="delete">delete</string>
+    <string name="complete">Completed:</string>
+    <string name="spinnerFirst">AssignTask</string>
+    <string name="spinnerLast">Unassigned</string>
+    <string name="assigned">Assigned to:</string>
+    <string name="todo">TODO</string>
+
 </resources>
